fix(dropdown): Elements overflowing should be hidden but allow scrolling (#478)

--- a/src/components/dropdown/_dropdown.scss
+++ b/src/components/dropdown/_dropdown.scss
@@ -112,8 +112,8 @@
       display: flex;
       flex-direction: column;
       background-color: $ui-01;
-      max-height: 50rem;
-      overflow: visible;
+      max-height: 15rem;
+      overflow: auto;
       transition: $transition--expansion $bx--ease-in;
       opacity: 1;
     }
